// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Another Button with some emoji 1`] = `
<div>
  prefix
   
  <button
    onClick={[Function]}
  >
    <span
      aria-label="so cool"
      role="img"
    >
      😀 😎 👍 💯
    </span>
  </button>
   
  suffix
</div>
`;

exports[`Storyshots Another Button with text 1`] = `
<div>
  prefix
   
  <button
    onClick={[Function]}
  >
    Hello button
  </button>
   
  suffix
</div>
`;

exports[`Storyshots Text Simple 1`] = `
<div>
  prefix
   
  contents
   
  suffix
</div>
`;
